[tool.poetry]
name = "pygame-tutorial"
version = "0.1.0"
description = "a tutorial about pygames from youtube"
authors = ["lcwyo <lancechat@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
